--- a/src/main/resources/localization/local_en.properties
+++ b/src/main/resources/localization/local_en.properties
@@ -13,3 +13,4 @@ locale.cardNumber=Card Number
 locale.loyality=Loyality
 locale.loyalityMessage=Your loyality is
 locale.saveChangesButton=Save Changes
+locale.loginError=User not found
