--- a/src/main/resources/localization/local.properties
+++ b/src/main/resources/localization/local.properties
@@ -14,3 +14,8 @@ locale.loyality=Loyality
 locale.loyalityMessage=Your loyality is
 locale.saveChangesButton=Save Changes
 locale.loginError=User not found
+locale.addToOrderBtn=Add to order
+locale.tableColoumnName=Name
+locale.tableColoumnPrice=Price
+locale.tableColoumnDescription=Description
+locale.photo=Photo
