--- a/src/main/resources/localization/local_by.properties
+++ b/src/main/resources/localization/local_by.properties
@@ -14,3 +14,8 @@ locale.loyality=\u041b\u0430\u044f\u043b\u044c\u043d\u0430\u0441\u0446\u044c
 locale.loyalityMessage=\u0412\u0430\u0448\u0430\u0020\u043b\u0430\u044f\u043b\u044c\u043d\u0430\u0441\u0446\u044c
 locale.saveChangesButton=\u0417\u0430\u0445\u0430\u0432\u0430\u0446\u044c\u0020\u0437\u043c\u0435\u043d\u044b
 locale.loginError=\u041a\u0430\u0440\u044b\u0441\u0442\u0430\u043b\u044c\u043d\u0456\u043a\u0020\u043d\u0435\u0020\u0437\u043d\u043e\u0439\u0434\u0437\u0435\u043d\u044b
+locale.addToOrderBtn=\u0414\u0430\u0434\u0430\u0446\u044c\u0020\u0443\u0020\u0437\u0430\u043a\u0430\u0437
+locale.tableColoumnName=\u041d\u0430\u0437\u0432\u0430
+locale.tableColoumnPrice=\u041a\u043e\u0448\u0442
+locale.tableColoumnDescription=\u0410\u043f\u0456\u0441\u0430\u043d\u043d\u0435
+locale.tableColoumnPhoto=\u0424\u043e\u0442\u0430
