--- a/src/main/resources/localization/local_ru.properties
+++ b/src/main/resources/localization/local_ru.properties
@@ -14,3 +14,8 @@ locale.loyality=\u041b\u043e\u044f\u043b\u044c\u043d\u043e\u0441\u0442\u044c
 locale.loyalityMessage=\u0412\u0430\u0448\u0430\u0020\u043b\u043e\u044f\u043b\u044c\u043d\u043e\u0441\u0442\u044c
 locale.saveChangesButton=\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c\u0020\u0438\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f
 locale.loginError=\u041f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u0020\u043d\u0435\u0020\u043d\u0430\u0439\u0434\u0435\u043d
+locale.addToOrderBtn=\u0414\u043e\u0431\u0430\u0432\u0438\u0442\u044c\u0020\u0432\u0020\u0437\u0430\u043a\u0430\u0437
+locale.tableColoumnName=\u041d\u0430\u0437\u0432\u0430\u043d\u0438\u0435
+locale.tableColoumnPrice=\u0421\u0442\u043e\u0438\u043c\u043e\u0441\u0442\u044c
+locale.tableColoumnDescription=\u041e\u043f\u0438\u0441\u0430\u043d\u0438\u0435
+locale.tableColoumnPhoto=\u0424\u043e\u0442\u043e
